kuber-homeworks/1.5/files/backend.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: backend
  labels:
    app: backend
spec:
  replicas: 3
  selector:
    matchLabels:
      app: backend
  template:
    metadata:
      labels:
        app: backend
    spec:
     containers:
      - name: multitool
        image: wbitt/network-multitool
        ports:
        - containerPort: 80
          name: backend-port
