kuber-homeworks/1.5/files/backend-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: backend-svc
spec:
  selector:
    app: backend
  ports:
    - name:  backend-port
      protocol: TCP
      port:  80
