kuber-homeworks/1.5/files/frontend-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: frontend-svc
spec:
  selector:
    app: frontend
  ports:
    - name:  frontend-port
      protocol: TCP
      port:  80
